# git-playground

./: .gitignore  README.md
atom_c_project/: test.c  test.cpp
first_cmake_project/: CMakeLists.txt  test.cpp
first_vsc_cmake_project/: CMakeLists.txt  main.cpp  main.h
first_vsc_cmake_project/HTTPDownloader/: CMakeLists.txt  FindTidy.cmake  HTTPDownloader.cpp  HTTPDownloader.h
first_vsc_cmake_project/mybuild/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  example1
largest_number/: print_largest.c
python-test-unit/: unit.py
python_stuff/: my_replace.py
